@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 22-05-2006 fixed: Thumb issues with thumbs popping up on parent items, and not showing up for some stacked items.
+ - 22-05-2006 fixed: A few minor directory history issues with the new My Programs system.
  - 21-05-2006 removed: <home> tag from XBoxMediaCenter.xml
 
 ******************************************************************************
